--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://risotto.joeroe.io"
 theme = "risotto"
 title = "risotto demo"
 author = "Joe Roe"
-copyright = "© [Joe Roe](https://joeroe.io) & [risotto contributors](https://github.com/joeroe/risotto/graphs/contributors)."
+copyright = "© [Logan Norris](https://phdbuilds.com)"
 paginate = 3
 languageCode = "en"
 DefaultContentLanguage = "en"
